user1/namespace-spark-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "u1-spark-cluster"
  labels:
    name: "u1-spark-cluster"
