user1/spark-master-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spark-master
  namespace: u1-spark-cluster
spec:
  ports:
    - port: 7077
      targetPort: 7077
      name: spark
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    component: spark-master
