user1/zeppelin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zeppelinu1
  namespace: u1-spark-cluster
spec:
  rules:
  - host: zeppelinu1.k8s.aws.training.inovex.io
    http:
      paths:
      - path: /
        backend:
          serviceName: zeppelin
          servicePort: 80
